minor UI fixes for non mobile design

--- a/src/stylesheets/dashboard/theme-new.scss
+++ b/src/stylesheets/dashboard/theme-new.scss
@@ -159,7 +159,7 @@
 
       display: flex;
       flex-direction: column;
-      gap: 20px;
+      gap: 19px;
       box-sizing: border-box;
 
       width: min(370px, 40vw);
@@ -307,9 +307,15 @@
       }
 
       div.next-seven-container {
-        margin-inline: var(--dynamic-right-margin-inline);
-        border-bottom: var(--dynamic-right-color) 1px solid;
-        padding-bottom: 10px;
+        // padding-bottom: 10px;
+        width: 100%;
+
+        div.next-seven-container-friend {
+          margin-inline: var(--dynamic-right-margin-inline);
+          border-bottom: var(--dynamic-right-color) 1px solid;
+          padding-top: 10px;
+
+        }
       }
 
       div.progress-chart-container {
